Tue Jun 26 20:36:53 2012  Tanaka Akira  <akr@fsij.org>

	* lib/drb/ssl.rb: generate 1024 bits RSA key instead of 512 bits.
	  OpenSSL 1.0.1 rejects 512 bits RSA key for TLS1.2 with SHA512.
	  http://rt.openssl.org/Ticket/Display.html?id=2769&user=guest&pass=guest
	  reported by Bohuslav Kabrda.
	  [ruby-core:43844] [ruby-trunk - Bug #6221]

Tue Jun 26 20:35:59 2012  Eric Hodel  <drbrain@segment7.net>

	* ext/zlib/zlib.c (do_inflate):  Inflate more data if buffered data
	  exists.  Allows Zlib::Inflate#set_dictionary to work.
	  [ruby-trunk - Bug #5929]

Thu Jun 21 13:42:57 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread.c (rb_threadptr_execute_interrupts_common):
	  test_signal_requiring of test/ruby/test_signal.rb fail if the sub
	  process is killed on waiting IO in lex_io_gets in rb_load_file in
	  rb_load_internal in require.
	  This is because
	  (1) the process receive the killing signal in
	      rb_thread_io_blocking_region in rb_read_internal in lex_io_gets.
	  (2) set th->errinfo as INT2FIX(TAG_FATAL) at
	      rb_threadptr_execute_interrupts_common.
	  (3) escape rb_load_file in rb_load_internal and jump to EXEC_TAG()
	      without set loaded as TRUE.
	  (4) call first rb_exc_raise(GET_THREAD()->errinfo); because loaded
	      is FALSE as above. this errinfo should be an exception object
	      but this is INT2FIX(TAG_FATAL).
	  Don't call first rb_exc_raise if GET_THREAD()->errinfo is Fixnum.

Mon Jun 11 19:56:22 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/webrick/test_cgi.rb (class TestWEBrickCGI): respect
	  RbConfig::CONFIG["LIBPATHENV"]. [Bug #5135] [ruby-core:38653]
	* test/webrick/test_filehandler.rb (class WEBrick): ditto.

Tue Jun  5 14:03:53 2012  Akinori MUSHA  <knu@iDaemons.org>

	* lib/ipaddr.rb: Inhibit zero-filled octets in an IPv4 address in
	  all platforms. [ruby-dev:45671]

	* lib/ipaddr.rb: Allow the x:x:x:x:x:x:d.d.d.d form not limited to
	  IPv4 mapped/compatible addresses.  This change also makes it