@@ -1,10 +1,10 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 239
+#define RUBY_PATCHLEVEL 240
 
-#define RUBY_RELEASE_DATE "2012-06-26"
+#define RUBY_RELEASE_DATE "2012-06-27"
 #define RUBY_RELEASE_YEAR 2012
 #define RUBY_RELEASE_MONTH 6
-#define RUBY_RELEASE_DAY 26
+#define RUBY_RELEASE_DAY 27
 
 #include "ruby/version.h"
 
